chore: Adjust and format config files
Add 'favicon' icon too.

https://github.com/felipeuliana/brutus-blog/projects/1#card-56274905

--- a/generators/templates/stories.jsx.hbs
+++ b/generators/templates/stories.jsx.hbs
@@ -6,4 +6,4 @@ export default {
   title: 'Components/{{pascalCase name}}'
 }
 
-export const Default = () => <{{pascalCase name}} />
+export const Default = (args) => <{{pascalCase name}} {...args} />
